# FbxResizer

./: AXIS_SPECIFIC_METADATA.md  BUILD_SUCCESS.md  CMakeLists.txt  CUSTOM_PROPERTY_SCALING.md  DECIMAL_POINT_FIX.md  FBX_SDK_INTEGRATION.md  FILE_OVERWRITE_UPDATE.md  FINAL_SKIP_AND_OVERWRITE_BEHAVIOR.md  FbxProcessor.cpp  FbxProcessor.h  FbxResizer.cpp  FbxResizer.h  IMPLEMENTATION_COMPLETE.md  METADATA_SCALING_LOGGING.md  METADATA_UI_LOGGING.md  PERSISTENT_SETTINGS.md  QUICKSTART.md  README.md  SETTINGS_FIX.md  SKELETON_SCALING_FIX.md  SKIP_LOGIC_REMOVED.md  USER_CONFIGURABLE_METADATA.md  WINDOW_TITLE_FIX.md  WINDOW_TITLE_UPDATE_V2.md  resource.h
